Source/WebCore/page/FrameView.cpp
@@ -2500,8 +2500,14 @@ void FrameView::performPostLayoutTasks()
     }
 
 #if USE(ACCELERATED_COMPOSITING)
-    if (TiledBacking* tiledBacking = this->tiledBacking())
-        tiledBacking->setTileCoverage(canHaveScrollbars() ? TiledBacking::CoverageForScrolling : TiledBacking::CoverageForVisibleArea);
+    if (TiledBacking* tiledBacking = this->tiledBacking()) {
+        if (page) {
+            if (ScrollingCoordinator* scrollingCoordinator = page->scrollingCoordinator()) {
+                bool shouldLimitTileCoverage = !canHaveScrollbars() || scrollingCoordinator->shouldUpdateScrollLayerPositionOnMainThread();
+                tiledBacking->setTileCoverage(shouldLimitTileCoverage ? TiledBacking::CoverageForVisibleArea : TiledBacking::CoverageForScrolling);
+            }
+        }
+    }
 #endif
 
     scrollToAnchor();
