Source/WebCore/page/scrolling/ScrollingCoordinator.cpp
@@ -258,7 +258,7 @@ void ScrollingCoordinator::handleWheelEventPhase(PlatformWheelEventPhase phase)
 }
 #endif
 
-bool ScrollingCoordinator::hasNonLayerFixedObjects(FrameView* frameView)
+bool ScrollingCoordinator::hasNonLayerFixedObjects(FrameView* frameView) const
 {
     const FrameView::ViewportConstrainedObjectSet* viewportConstrainedObjects = frameView->viewportConstrainedObjects();
     if (!viewportConstrainedObjects)
@@ -279,7 +279,7 @@ bool ScrollingCoordinator::hasNonLayerFixedObjects(FrameView* frameView)
 #endif
 }
 
-void ScrollingCoordinator::updateShouldUpdateScrollLayerPositionOnMainThread()
+MainThreadScrollingReasons ScrollingCoordinator::mainThreadScrollingReasons() const
 {
     FrameView* frameView = m_page->mainFrame()->view();
 
@@ -296,7 +296,12 @@ void ScrollingCoordinator::updateShouldUpdateScrollLayerPositionOnMainThread()
     if (m_page->mainFrame()->document()->isImageDocument())
         mainThreadScrollingReasons |= IsImageDocument;
 
-    setShouldUpdateScrollLayerPositionOnMainThread(mainThreadScrollingReasons);
+    return mainThreadScrollingReasons;
+}
+
+void ScrollingCoordinator::updateShouldUpdateScrollLayerPositionOnMainThread()
+{
+    setShouldUpdateScrollLayerPositionOnMainThread(mainThreadScrollingReasons());
 }
 
 void ScrollingCoordinator::setForceMainThreadScrollLayerPositionUpdates(bool forceMainThreadScrollLayerPositionUpdates)
